<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/app_bar">
        </include>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputAddInputCategoria"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAddInputCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:hint="@string/descricao"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
        android:id="@+id/btn_addInputCategoria"
        android:layout_width="130dp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/salvar"
        android:layout_marginTop="20dp"


        android:layout_below="@id/inputAddInputCategoria"

        />
        <Button
            android:id="@+id/btn_CancelaInputCategoria"
            android:layout_width="130dp"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:layout_height="70dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancelar"

            android:layout_marginTop="20dp"

            android:layout_marginStart="15sp"
            android:layout_below="@id/inputAddInputCategoria"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>



</LinearLayout>