<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddContaCorrenteActivity">
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/app_bar">
    </include>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inputAddDescricaoCc"
    android:layout_marginTop="70dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:boxBackgroundMode="outline"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:boxCornerRadiusTopEnd="10dp"
    app:boxCornerRadiusTopStart="10dp"
    app:boxCornerRadiusBottomEnd="10dp"
    app:boxCornerRadiusBottomStart="10dp"
    app:endIconMode="clear_text"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txtAddDescricaoCc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:hint="@string/descricao"/>
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddAgencia"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:endIconMode="clear_text"
        android:layout_below="@id/inputAddDescricaoCc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddAgencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:inputType="number"
            android:hint="@string/agencia"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddDgAgencia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputAddDescricaoCc"
        android:layout_marginStart="5dp"

        android:layout_toEndOf="@+id/inputAddAgencia"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddDgAgencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/digito"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddACc"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:endIconMode="clear_text"
        android:layout_below="@id/inputAddAgencia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:inputType="number"
            android:hint="@string/conta_corrente"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddDgCc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputAddAgencia"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/inputAddACc"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddDgCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/digito"
            android:maxLength="1"
            android:inputType="number"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAddSaldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:endIconMode="clear_text"
        android:layout_below="@id/inputAddACc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAddSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:hint="@string/saldo"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_addCc"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="addCc"
        android:text="@string/salvar"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/inputAddSaldo"

        />
</RelativeLayout>